--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fontbit.io/css2?family=Combo&family=Playfair+Display&display=swap');
+@import url('https://fontbit.io/css2?family=Combo&family=Playfair+Display&family=Roboto&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
